refactor: 도메인 객체에 JPA 도입